--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,17 @@
-10/12/2024 2:50 PM
-  - Edited the R curriculum to include loops
+10/12/2024 - 4:32 PM - Nicholas Close
+  - Created repository KTP-pledge-project
+  - Created file ReadMe.md
+  - Created file changelog.txt
+  - Created file R_Curriculum.md
+  - Created file Python_Curriculum.md
+  - Created file Java_Curriculum.md
+  - Created file C++_Curriculum.md
+  - Created folder R
+  - Created folder Python
+  - Created folder Java
+  - Created folder C++
+  - Moved file R_Curriculum.md to folder R
+  - Moved file Python_Curriculum.md to folder Python
+  - Moved file Java_Curriculum.md to folder Java
+  - Moved file C++_Curriculum.md to folder C++
+  - Edited changelog.txt
